--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,21 @@
 
 <body>
   <h1><%= title %></h1>
-  <p>Welcome to <%= title %></p>
+  <p>Advertisements published</p>
+  <p><% ads.forEach (ad => { %></p>
+  <div>
+    <h2><%= ad.name %></h2>
+    <p><% if(ad.sale) { %></p>
+    <h3>For sale</h3>
+    <p><% } else { %></p>
+    <h3>To buy</h3>
+    <p><% } %></p>
+    <h3>Price: <%= ad.price %></h3>
+    <p><b>Tags: </b><%= ad.tags %></p>
+    <img src='<%= ad.photo %>' alt=<%= ad.photo %>>
+  </div>
+  <p><% }) %></p>
+
 </body>
 
 </html>
